--- a/client/api.html
+++ b/client/api.html
@@ -1,5 +1,5 @@
 <template name="api">
-  <h2 class="button">Maybe API</h2>
+  <h2 id="api-title">Maybe API</h2>
   <div id="api-content" class="hidden">
     Get all of the player records:
     <pre>
@@ -8,7 +8,7 @@
 
     Get an individual record:
     <pre>
-      <code class="bash">curl http://127.0.0.1:3000/maybe-api-v1/devices/XXX</code>
+      <code class="bash">curl http://127.0.0.1:3000/maybe-api-v1/devices/{deviceid}</code>
     </pre>
 
     Create a record:
@@ -18,12 +18,12 @@
 
     Update a record:
     <pre>
-      <code class="bash">curl -X PUT -d "{\"\$set\":{\"values.button1\" : false}}" http://127.0.0.1:3000/maybe-api-v1/devices/XXX</code>
+      <code class="bash">curl -X PUT -d "{\"\$set\":{\"values.button1\" : false}}" http://127.0.0.1:3000/maybe-api-v1/devices/{deviceid}</code>
     </pre>
 
     Delete a record:
     <pre>
-      <code class="bash">curl -X DELETE http://127.0.0.1:3000/maybe-api-v1/devices/XXX</code>
+      <code class="bash">curl -X DELETE http://127.0.0.1:3000/maybe-api-v1/devices/{deviceid}</code>
     </pre>
   </div>
 </template>
