--- a/client/device_item.html
+++ b/client/device_item.html
@@ -1,22 +1,23 @@
 <template name="deviceItem">
   <div class="device">
     <h3>{{deviceid}}</h3>
-    <p>
+    <p class="button" id="button1">
       button1:
       {{button1}}
     </p>
-    <p>
+    <p class="button" id="button2">
       button2:
       {{button2}}
     </p>
-    <p>
+    <p class="button" id="button3">
       button3:
       {{button3}}
     </p>
-    <p>
+    <p class="button" id="button4">
       button4:
       {{button4}}
     </p>
+    <input type="text" value="{{color}}" placeholder="Color">
   </div>
 </template>
 
