add code snippet as demo.

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,10 @@
       <h2 class="subtitle">Devices:</h2>
       {{> devicesList}}
     </div>
+
+    <div>
+      {{> test}}
+    </div>
   </div>
 </body>
 
