add toggle maybeCodeBlockHover maybeCodeBlockChoosed as demo.

--- a/app/client/test.html
+++ b/app/client/test.html
@@ -2,7 +2,7 @@
     <pre>
       <code class="java">
 maybe ("block test") {
-        <div class="codesnippet codesnippetchoosed">
+        <div class="maybeCodeBlock maybeCodeBlockChoosed">
   if ("true") {<br/>
     i = 0;<br/>
   } else {<br/>
@@ -17,11 +17,11 @@ maybe ("block test") {
   }
         </div>
 } or {
-        <div class="codesnippet">
+        <div class="maybeCodeBlock">
   i = 1;
         </div>
 } or {
-        <div class="codesnippet">
+        <div class="maybeCodeBlock">
   j = 2;<br/>
   maybe ("another block test") {<br/>
     j = 3;<br/>
