--- a/app/client/test.html
+++ b/app/client/test.html
@@ -2,7 +2,7 @@
     <pre>
       <code class="java">
 maybe ("block test") {
-        <div class="maybeCodeBlock maybeCodeBlockChoosed">
+<br/><div class="maybeCodeBlock maybeCodeBlockChoosed">
   if ("true") {<br/>
     i = 0;<br/>
   } else {<br/>
@@ -14,18 +14,15 @@ maybe ("block test") {
     } or {<br/>
       j = 3;<br/>
     }<br/>
-  }
-        </div>
-} or {
-        <div class="maybeCodeBlock">
-  i = 1;
-        </div>
-} or {
-        <div class="maybeCodeBlock">
+  }<br/></div>
+} or {<br/>
+<div class="maybeCodeBlock">
+  i = 1;<br/></div>
+} or {<br/><div class="maybeCodeBlock">
   j = 2;<br/>
   maybe ("another block test") {<br/>
     j = 3;<br/>
-  }</div>
+  }</div><br/>
 }
       </code>
     </pre>
