add button for options

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -11,9 +11,9 @@
       <h2 class="subtitle">Packages:</h2>
       {{> packageList}}
     </div>
-    <!-- <div> -->
-    <!--   {{> test}} -->
-    <!-- </div> -->
+    <div>
+      {{> test}}
+    </div>
   </div>
 </body>
 
