fix bug caused by hash doesn't exist in device.

--- a/app/client/package.html
+++ b/app/client/package.html
@@ -11,6 +11,7 @@
       <div class="statement">
         <div class="label">
           {{label}}
+          <button class="config">Config for each device</button>
         </div>
         <div class="alternatives">
 
