temp work: add config template

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -26,12 +26,7 @@
 <template name="packageList">
     <div id="packages-container">
       <h2 class="subtitle">Packages:</h2>
-      <div id="config-container">
-        <h2>{{select}}</h2>
-        <div class="code">
-          {{{choiceDetails}}}
-        </div>
-      </div>
+      {{> config}}
       <div class="packageList">
         {{#each packages}}
         {{> package}}
