--- a/app/client/config.html
+++ b/app/client/config.html
@@ -1,11 +1,11 @@
 <template name="config">
   <div id="config-container">
     <h2>{{select}}</h2>
-    <div class="optionList">
-      {{#each options}}
-      {{option}}
-      {{/each}}
-    </div>
+    {{#with valueJSONObject}}
+    <button class="assign">
+      randonly assign values to deives
+    </button>
+    {{/with}}
     <div class="code">
       {{{choiceDetails}}}
     </div>
