--- a/app/client/config.html
+++ b/app/client/config.html
@@ -2,14 +2,14 @@
   <div id="config-container">
     <h2>{{select}}</h2>
     {{#with valueJSONObject}}
-    <button class="assign">
-      randonly assign values to deives
-    </button>
-    {{#each options}}
-    <button class="option">
-      {{option}}
-    </button>
-    {{/each}}
+    <!-- <button class="assign"> -->
+    <!--   randonly assign values to deives -->
+    <!-- </button> -->
+    <!-- {{#each options}} -->
+    <!-- <button class="option"> -->
+    <!--   {{option}} -->
+    <!-- </button> -->
+    <!-- {{/each}} -->
     {{/with}}
     <div class="code">
       {{{choiceDetails}}}
