give button for options

--- a/app/client/config.html
+++ b/app/client/config.html
@@ -5,11 +5,11 @@
     <!-- <button class="assign"> -->
     <!--   randonly assign values to deives -->
     <!-- </button> -->
-    <!-- {{#each options}} -->
-    <!-- <button class="option"> -->
-    <!--   {{option}} -->
-    <!-- </button> -->
-    <!-- {{/each}} -->
+    {{#each options}}
+    <button class="option">
+      {{option}}
+    </button>
+    {{/each}}
     {{/with}}
     <div class="code">
       {{{choiceDetails}}}
