temp work, finish POST and DELETE for device

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -26,7 +26,7 @@
 <template name="packageList">
     <div id="packages-container">
       <h2 class="subtitle">Packages:</h2>
-      {{> config}}
+      <!-- {{> config}} -->
       <div class="packageList">
         {{#each packages}}
         {{> package}}
