update README.md/html, push Badges down

--- a/app/public/README.html
+++ b/app/public/README.html
@@ -17,9 +17,9 @@
     </style>
   </head>
   <body>
-    <article class="markdown-body"><p><a href="https://travis-ci.org/xcv58/backend"><img src="https://travis-ci.org/xcv58/backend.svg?branch=meteor" alt="Build Status"></a>
+    <article class="markdown-body"><h1 id="maybe-backend"><a class="header-link" href="#maybe-backend"></a>Maybe backend</h1>
+<p><a href="https://travis-ci.org/xcv58/backend"><img src="https://travis-ci.org/xcv58/backend.svg?branch=meteor" alt="Build Status"></a>
 <a href="https://codeclimate.com/github/xcv58/backend"><img src="https://codeclimate.com/github/xcv58/backend/badges/gpa.svg" alt="Code Climate"></a></p>
-<h1 id="maybe-backend"><a class="header-link" href="#maybe-backend"></a>Maybe backend</h1>
 <p>This project is backend for <a href="http://blue.cse.buffalo.edu/projects/maybe/">maybe</a> project of <a href="http://blue.cse.buffalo.edu">blue</a> in <a href="http://www.cse.buffalo.edu">University at Buffalo</a>.</p>
 <h1 id="table-of-contents"><a class="header-link" href="#table-of-contents"></a>Table of Contents</h1>
 <ul class="list">
