fix "There is already a collection named ..." issue by move subscribe into Template.onCreated use Template.subscriptionsReady to control Loading and render

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -4,8 +4,12 @@
       <h1 id="title">Maybe Backend!</h1>
 
       {{> api}}
-      {{> packageList}}
-      {{> devicesList}}
+      {{#if Template.subscriptionsReady}}
+        {{> packageList}}
+        {{> devicesList}}
+      {{else}}
+        Loading
+      {{/if}}
 
       <!-- <div> -->
       <!--   {{> test}} -->
