use Template.subscriptionsReady instead of dataReady

--- a/app/client/package.html
+++ b/app/client/package.html
@@ -1,6 +1,6 @@
 <template name="package">
   <div class="package">
-    {{#if dataReady}}
+    {{#if Template.subscriptionsReady}}
       <div class="packageName">
         {{packageName}}
       </div>
