--- a/app/client/index.html
+++ b/app/client/index.html
@@ -1,4 +1,10 @@
+<head>
+  <meta charset="utf-8">
+  <title>Maybe Backend</title>
+</head>
+
 <template name="home">
+  {{> nav}}
   <div id="board">
     <h1 id="title">Maybe Backend!</h1>
 
@@ -14,6 +20,34 @@
     <!--   {{> test}} -->
     <!-- </div> -->
   </div>
+</template>
+
+<template name="nav">
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Maybe Backend</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <!-- <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li> -->
+          <li><a href="#packages-container">Packages</a></li>
+          <li><a href="#devices-container">Devices</a></li>
+          <li><a href="#">RESTful API</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
 </template>
 
 <template name="devicesList">
