--- a/app/client/nav.html
+++ b/app/client/nav.html
@@ -16,10 +16,13 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <!-- <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li> -->
-          <li><a href="#packages-container">Packages</a></li>
-          <li><a href="#devices-container">Devices</a></li>
-          <li><a href="#api">RESTful API</a></li>
-          <li><a href="#contact">Contact</a></li>
+          {{#each links}}
+            {{#if active}}
+              <li class="active"><a href="{{href}}">{{name}}</a></li>
+            {{else}}
+              <li><a href="{{href}}">{{name}}</a></li>
+            {{/if}}
+          {{/each}}
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
