change api description theme to jasonm23-foghorn

--- a/app/public/README.html
+++ b/app/public/README.html
@@ -1,23 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <title>Maybe backend</title>
-    <link type="text/css" rel="stylesheet" href="assets/css/github-markdown.css">
-    <link type="text/css" rel="stylesheet" href="assets/css/pilcrow.css">
-    <link type="text/css" rel="stylesheet" href="assets/css/hljs-github.min.css"/>
-    <style>
-      body {
-        min-width: 200px;
-        max-width: 790px;
-        margin: 0 auto;
-        padding: 30px;
-      }
-    </style>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link type="text/css" rel="stylesheet" href="assets/style.css" />
+    <link type="text/css" rel="stylesheet" href="assets/pilcrow.css" />
+    <link type="text/css" rel="stylesheet" href="assets/hljs-github.min.css"/>
   </head>
-  <body>
-    <article class="markdown-body"><h1 id="maybe-backend"><a class="header-link" href="#maybe-backend"></a>Maybe backend</h1>
+<body><h1 id="maybe-backend"><a class="header-link" href="#maybe-backend"></a>Maybe backend</h1>
 <p><a href="https://travis-ci.org/xcv58/backend"><img src="https://travis-ci.org/xcv58/backend.svg?branch=meteor" alt="Build Status"></a>
 <a href="https://codeclimate.com/github/xcv58/backend"><img src="https://codeclimate.com/github/xcv58/backend/badges/gpa.svg" alt="Code Climate"></a></p>
 <p>This project is backend for <a href="http://blue.cse.buffalo.edu/projects/maybe/">maybe</a> project of <a href="http://blue.cse.buffalo.edu">blue</a> in <a href="http://www.cse.buffalo.edu">University at Buffalo</a>.</p>
@@ -259,6 +249,5 @@ Otherwise, the server will not allow the POST operation.</p>
 <p>You shouldn&#39;t PUT (change) log, because the log is unchangeable.</p>
 <h3 id="delete-2"><a class="header-link" href="#delete-2"></a>DELETE</h3>
 <p>You shouldn&#39;t DELETE log(s), we&#39;ll archive logs offline.</p>
-    </article>
-  </body>
+</body>
 </html>
