temporary disable hash for package

--- a/app/client/package.html
+++ b/app/client/package.html
@@ -4,9 +4,9 @@
       <div class="packageName">
         {{packageName}}
       </div>
-      <div class="hash">
-        {{hash}}
-      </div>
+      <!-- <div class="hash"> -->
+      <!--   {{hash}} -->
+      <!-- </div> -->
       <div class="packageDetail">
         {{#each statements}}
         <div class="statement">
