update toc of README.md

--- a/app/client/README.html
+++ b/app/client/README.html
@@ -7,7 +7,7 @@
 <li><a href="#maybe-backend">Maybe backend</a></li>
 <li><a href="#table-of-contents">Table of Contents</a></li>
 <li><a href="#usage">Usage</a><ul class="list">
-<li><a href="#convert-readmemd-to-meteor-template">Convert README.md to Meteor template</a></li>
+<li><a href="#convert-readme-file-to-meteor-template">Convert readme file to Meteor template</a></li>
 </ul>
 </li>
 <li><a href="#restful-apis">RESTFul APIs</a><ul class="list">
