--- a/app/client/index.html
+++ b/app/client/index.html
@@ -6,8 +6,8 @@
 
 <template name="home">
   {{> nav}}
-  <div id="board">
-    <h1 id="title">Maybe Backend!</h1>
+  <div class="flex-container">
+    <h1 id="title" class="flex-row">Maybe Backend!</h1>
 
     {{#if Template.subscriptionsReady}}
     {{> packageList}}
@@ -23,7 +23,7 @@
 </template>
 
 <template name="devicesList">
-  <div id="devices-container">
+  <div id="devices-container" class="flex-row">
     <h2 class="subtitle">Devices:</h2>
     <div class="devices">
       {{#each devices}}
@@ -34,10 +34,10 @@
 </template>
 
 <template name="packageList">
-  <div id="packages-container">
+  <div id="packages-container" class="flex-row">
     <h2 class="subtitle">Packages:</h2>
     <!-- {{> config}} -->
-    <div class="packageList">
+    <div class="packageList flex-row">
       {{#each packages}}
       {{> package}}
       {{/each}}
