refactor, change template name deviceItem to device

--- a/app/client/device.html
+++ b/app/client/device.html
@@ -1,4 +1,4 @@
-<template name="deviceItem">
+<template name="device">
   <div class="device">
     {{#if Template.subscriptionsReady}}
       <h3 class="deviceID">{{deviceid}}</h3>
