--- a/app/client/index.html
+++ b/app/client/index.html
@@ -27,7 +27,7 @@
     <h2 class="subtitle">Devices:</h2>
     <div class="devices">
       {{#each devices}}
-      {{> deviceItem}}
+      {{> device}}
       {{/each}}
     </div>
   </div>
