temp work, add log counts

--- a/app/client/log.html
+++ b/app/client/log.html
@@ -36,6 +36,7 @@
 <template name="log_device">
     {{#if Template.subscriptionsReady}}
       {{deviceid}}
+      Total log: {{count}}
       {{#each logs}}
         {{{logHtmlCode}}}
       {{/each}}
