--- a/app/client/package.html
+++ b/app/client/package.html
@@ -10,7 +10,7 @@
       <div class="packageDetail">
         {{#each statements}}
         <div class="statement">
-          <div class="label">
+          <div class="maybe-label">
             {{label}}
             <button class="config">Config for each device</button>
           </div>
