optimize view for log

--- a/app/client/log.html
+++ b/app/client/log.html
@@ -17,7 +17,7 @@
   {{#if alone}}
   {{> nav}}
   {{/if}}
-  <div class="flex-element">
+  <div>
     {{#if Template.subscriptionsReady}}
       <div class="packageName">
         {{packageName}}
