add account for client

--- a/app/client/nav.html
+++ b/app/client/nav.html
@@ -24,6 +24,9 @@
             {{/if}}
           {{/each}}
         </ul>
+        <ul class="nav navbar-nav navbar-right">
+            {{> loginButtons}} <!-- here -->
+        </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
