--- a/app/client/nav.html
+++ b/app/client/nav.html
@@ -25,7 +25,7 @@
           {{/each}}
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            {{> loginButtons}} <!-- here -->
+            {{> atNavButton}}
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
