add random button for each label

--- a/app/client/package.html
+++ b/app/client/package.html
@@ -12,7 +12,7 @@
         <div class="statement">
           <div class="maybe-label">
             {{label}}
-            <button class="config">Config for each device</button>
+            <!-- <button class="config">Config for each device</button> -->
           </div>
           <div class="alternatives">
 
@@ -28,6 +28,7 @@
                 {{/if}}
               </div>
               {{/each}}
+              <button class="random">random</button>
             </div>
             <div class="code">
               {{{highlightedHtmlCode}}}
