fix Packages extra bottom space issue.

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -60,7 +60,7 @@
 <template name="packageList">
   <div id="packages-container" class="flex-column">
     <div class="packageList flex-column">
-      <h2 class="subtitle flex-column">Packages:</h2>
+      <h2 class="subtitle">Packages:</h2>
       <!-- {{> config}} -->
       {{#each packages}}
       {{> package}}
